--- a/bubbleSort.html
+++ b/bubbleSort.html
@@ -89,7 +89,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_1.png" alt="table_1">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_1.png" alt="table_1">
 
 
     <div class="First-Para">
@@ -101,7 +101,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_2.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_2.png" alt="">
 
 
     <div class="First-Para">
@@ -120,17 +120,17 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_3.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_3.png" alt="">
 
 
-    <div class="pic" class="First-Para">
+    <div class="First-Para">
       <p>
         בגלל ש 5 גדול מ 2 מתבצעת החלפה והמערך יראה כך:
       </p>
     </div>
 
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_4.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_4.png" alt="">
 
     <div class="First-Para">
       <p>
@@ -141,7 +141,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_5.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_5.png" alt="">
 
 
     <div class="First-Para">
@@ -151,7 +151,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_6.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_6.png" alt="">
 
 
     <div class="First-Para">
@@ -162,7 +162,7 @@
       </p>
     </div>
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_7.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_7.png" alt="">
 
     <div class="First-Para">
       <p>
@@ -181,7 +181,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_8.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_8.png" alt="">
 
     <div class="First-Para">
       <p>
@@ -200,7 +200,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_9.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_9.png" alt="">
 
     <div class="First-Para">
       <p>
@@ -208,7 +208,7 @@
       </p>
     </div>
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_10.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_10.png" alt="">
 
 
     <div class="First-Para">
@@ -232,7 +232,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForBubbleSort/Bubble_Sort_11.png" alt="">
+    <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_11.png" alt="">
 
 
     <div class="First-Para">
@@ -260,7 +260,7 @@
           <figcaption id="example1-caption">CODE:</figcaption>
           <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 
-<b>void</b> swap(<b>int</b> *<i>first</i> , <b>int</b> *<i>second</i>) <em>//swap between two variables.</em>
+<b>void</b> swap(<b>int</b> *<i>first</i>,<b>int</b> *<i>second</i>) <em>//swap between two variables.</em>
 {
   <b>int</b> temp;
   temp = *<i>first</i>;
@@ -268,7 +268,7 @@
   *<i>second</i> = temp;
 } 
 
-<b>void</b> bubble_sort(<b>int</b> *<i>array</i> , <b>int</b> <i>array_size</i>)
+<b>void</b> bubble_sort(<b>int</b> *<i>array</i>,<b>int</b> <i>array_size</i>)
 {
   <b>int</b> i ,j;
   <b>for</b>(i=0;i&lt;<i>array_size</i>-1;i++)<em>//in each loop the size of the array is decreased by 1</em>
