--- a/insertionSort.html
+++ b/insertionSort.html
@@ -96,7 +96,7 @@
     <h3 class="head-right">תהליך המיון:</h3>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_1.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_1.png" alt="">
 
 
     <!--תהליך המיון-->
@@ -110,10 +110,10 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_2.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_2.png" alt="">
     <br>
     <div class="First-Para">
-      <img  src="assest/TablesForInsertionSort/Insertion_sort_3.png" alt="">
+      <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_3.png" alt="">
     </div>
 
     <!--תהליך מיון-->
@@ -144,10 +144,10 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_4.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_4.png" alt="">
 
     <div class="First-Para">
-      <img  src="assest/TablesForInsertionSort/Insertion_sort_5.png" alt="">
+      <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_5.png" alt="">
     </div>
 
     <div class="First-Para">
@@ -159,7 +159,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_6.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_6.png" alt="">
 
     <div class="First-Para">
       <br>
@@ -176,7 +176,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_7.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_7.png" alt="">
 
 
     <!--תהליך מיון-->
@@ -189,11 +189,11 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_8.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_8.png" alt="">
 
 
     <div class="First-Para">
-      <img src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
+      <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
     </div>
 
 
@@ -204,7 +204,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_10.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_10.png" alt="">
 
 
     <!--תהליך מיון-->
@@ -216,11 +216,11 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_11.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_11.png" alt="">
 
 
     <div class="First-Para">
-      <img  src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
+      <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
     </div>
 
 
@@ -230,11 +230,11 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_12.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_12.png" alt="">
 
 
     <!--תהליך מיון-->
-    <div class="pic" class="First-Para">
+    <div class="First-Para">
       <p>
         <br>
         לאחר מכן משווים את הערך 3 לערך 2 שנמצא בתוך תא מספר 0.
@@ -242,11 +242,11 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_13.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_13.png" alt="">
 
 
     <div class="First-Para">
-      <img src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
+      <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
     </div>
 
 
@@ -259,7 +259,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_14.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_14.png" alt="">
 
 
     <!--תהליך מיון-->
@@ -282,9 +282,9 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForInsertionSort/Insertion_sort_14.png" alt="">
+    <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_14.png" alt="">
 
-    
+
     <div class="First-Para">
       <p>
         ובכך מסיימים את מיון ההכנסה.
@@ -320,17 +320,17 @@
         <figure class="code">
           <figcaption id="example1-caption">CODE 1:</figcaption>
           <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
-<b>void</b> insertion_sort(<b>int</b> <i>*arr</i>,<b>int</b> <i>size</i>)
+<b>void</b> insertion_sort(<b>int</b> *<i>arr</i>,<b>int</b> <i>size</i>)
 {
-  <b>int</b> temp, i,j;
+  <b>int</b> temp, i, j;
   <b>for</b>(i=1 ; i &lt; <i>size</i> ; i++)
   {
     temp = <i>arr</i>[i];
     j = i - 1;
 
-    <b>while</b>(j >= 0 && temp &lt; arr[j])
+    <b>while</b>((j >= 0) && (temp &lt; arr[j]))
     {
-      <i>arr</i>[j +1] = <i>arr</i>[j];
+      <i>arr</i>[j + 1] = <i>arr</i>[j];
       j = j - 1;
     }
 
