--- a/mergeSort.html
+++ b/mergeSort.html
@@ -131,7 +131,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_1.png" alt="">
+    <img class="pic_big" src="assest/TablesForMergeSort/Merge_sort_1.png" alt="">
 
 
     <!--דוגמה לתהליך המיון-->
@@ -142,7 +142,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_2.png" alt="">
+    <img class="pic_big" src="assest/TablesForMergeSort/Merge_sort_2.png" alt="">
 
 
     <!--דוגמה לתהליך המיון-->
@@ -153,16 +153,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_3.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_4.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_5.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_6.png" alt="">
-
-
-
+    <img class="pic_big" src="assest/TablesForMergeSort/Merge_sort_3.png" alt="">
 
 
     <div class="First-Para">
@@ -171,23 +162,7 @@
       </p>
     </div>
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_23.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_24.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_25.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_26.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_27.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_28.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_29.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_30.png" alt="">
-    <br>
-
+    <img class="pic_big" src="assest/TablesForMergeSort/Merge_sort_4.png" alt="">
 
 
     <div class="First-Para">
@@ -203,7 +178,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_7.png" alt="">
+    <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_5.png" alt="">
 
 
     <!--דוגמה לתהליך המיון-->
@@ -214,9 +189,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_8.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_9.png" alt="">
+    <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_6.png" alt="">
 
 
     <div class="First-Para">
@@ -227,7 +200,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_10.png" alt="">
+    <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_7.png" alt="">
 
 
     <div class="First-Para">
@@ -240,9 +213,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_11.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_9.png" alt="">
+    <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_8.png" alt="">
 
 
     <div class="First-Para">
@@ -253,7 +224,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_12.png" alt="">
+    <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_9.png" alt="">
 
 
     <!--דוגמה לתהליך מיון-->
@@ -266,9 +237,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_11.png" alt="">
-    <br>
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_13.png" alt="">
+    <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_10.png" alt="">
 
 
     <div class="First-Para">
@@ -278,7 +247,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_14.png" alt="">
+    <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_11.png" alt="">
 
 
     <!--דוגמה לתהליך מיון-->
@@ -290,7 +259,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_15.png" alt="">
+    <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_12.png" alt="">
 
 
     <div class="First-Para">
@@ -305,12 +274,12 @@
     <div class="First-Para">
       <p>
         <br>
-        נבצע מיון ומיזוג בין הערך 3 ל-28 ולאחר מכן יתקבל  מערך חדש בגודל 2:
+        נבצע מיון ומיזוג בין הערך 3 ל-28 ולאחר מכן יתקבל מערך חדש בגודל 2:
       </p>
     </div>
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_16.png" alt="">
-    
+    <img class="pic_sm" src="assest/TablesForMergeSort/Merge_sort_13.png" alt="">
+
     <div class="First-Para">
       <p>
         נבצע מיון ומיזוג בין הערך 1 ל-19 ולאחר מכן יתקבל מערך חדש בגודל 2:
@@ -318,7 +287,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_18.png" alt="">
+    <img class="pic_sm" src="assest/TablesForMergeSort/Merge_sort_14.png" alt="">
 
 
     <div class="First-Para">
@@ -328,7 +297,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_19.png" alt="">
+    <img class="pic_med" src="assest/TablesForMergeSort/Merge_sort_15.png" alt="">
 
 
     <div class="First-Para">
@@ -339,9 +308,8 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_20.png" alt="">
+    <img class="pic_big" src="assest/TablesForMergeSort/Merge_sort_16.png" alt="">
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_21.png" alt="">
 
     <div class="First-Para">
       <p>
@@ -352,7 +320,7 @@
     </div>
     <br>
 
-    <img class="pic" src="assest/TablesForMergeSort/Merge_sort_22.png" alt="">
+    <img class="pic_big" src="assest/TablesForMergeSort/Merge_sort_17.png" alt="">
 
 
 
