--- a/selectionSort.html
+++ b/selectionSort.html
@@ -92,7 +92,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_1.png" alt="first_array_no_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_1.png" alt="first_array_no_change">
 
 
     <div class="First-Para">
@@ -114,7 +114,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_2.png" alt="first_array_1_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_2.png" alt="first_array_1_change">
 
 
     <div class="First-Para">
@@ -124,7 +124,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_3.png" alt="first_array_2_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_3.png" alt="first_array_2_change">
 
 
     <div class="First-Para">
@@ -144,7 +144,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_3.png" alt="first_array_2_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_3.png" alt="first_array_2_change">
 
 
     <div class="First-Para">
@@ -159,7 +159,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_4.png" alt="first_array_3_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_4.png" alt="first_array_3_change">
 
 
     <div class="First-Para">
@@ -167,7 +167,7 @@
         לאחר ההחלפה המערך יראה כך:
       </p>
     </div>
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_5.png" alt="first_array_4_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_5.png" alt="first_array_4_change">
     <div class="First-Para">
       <p>
         <spam dir="ltr"> Current Parameters:i=3 ,j=4 ,min=3</spam>
@@ -182,7 +182,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_6.png" alt="first_array_5_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_6.png" alt="first_array_5_change">
 
 
     <div class="First-Para">
@@ -192,7 +192,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_7.png" alt="first_array_6_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_7.png" alt="first_array_6_change">
 
 
     <div class="First-Para">
@@ -211,14 +211,14 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_7.png" alt="first_array_6_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_7.png" alt="first_array_6_change">
 
 
     <div class="First-Para">
       <p>
         <spam dir="ltr"> Current Parameters:
           i=5 ,j=6 ,min=5</spam>
-          <br>
+        <br>
         בסבב השישי (והאחרון) נגדיל את i ב1 (כי אנחנו יודעים שכל הערכים לפניו ממוינים), נשווה את הערך שבmin אליו (min=5)
         <br>
         כלומר, אנו מחפשים כעת את האיבר השישי הכי קטן.
@@ -232,7 +232,7 @@
     </div>
 
 
-    <img class="pic" src="assest/TablesForSelectionSort/selection_sort_7.png" alt="first_array_6_change">
+    <img class="pic_big" src="assest/TablesForSelectionSort/selection_sort_7.png" alt="first_array_6_change">
 
     <h3 class="head-right">מיון בחירה נראה כך בקוד:</h3>
     <div class="row">
